# preprocessing

./: .gitignore  README.md  generate_xml_files.py  memobuch_demodata.csv  memobuch_generate_structure.py  pyproject.toml  requirements.txt  xml_template.txt
data/: demo_object.csv
log/: README.md
output/: README.md
output/memo.material/: DC.xml  IMPRINT.xml  datastreams.csv  object.csv
src/memobuch_preprocessing/: GSheet.py  MemoEvent.py  MemoPerson.py  MemoProcessor.py  MemoStatics.py  __init__.py  csv_mapper.py  generate_xml_files.py  main.py  memobuch_generate_structure.py
