[project]
name = "memobuch_preprocessing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sebastian Schiller-Stoff", email = "sebastian.stoff@uni-graz.at" }
]
dependencies = [
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "six==1.16.0",
    "tzdata==2024.2",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/memobuch_preprocessing"]

[project.scripts]
memo = "memobuch_preprocessing.main:main"
